docs/api/qiskit/0.33/circuit.md
---
title: circuit
description: API reference for qiskit.circuit
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.circuit
---

<span id="module-qiskit.circuit" />

<span id="qiskit-circuit" />

# Quantum Circuits

<span id="module-qiskit.circuit" />

`qiskit.circuit¶`

## Overview

<span id="module-qiskit.circuit" />

`¶`

The fundamental element of quantum computing is the **quantum circuit**. A quantum circuit is a computational routine consisting of coherent quantum operations on quantum data, such as qubits. It is an ordered sequence of quantum gates, measurements and resets, which may be conditioned on real-time classical computation. A set of quantum gates is said to be universal if any unitary transformation of the quantum data can be efficiently approximated arbitrarily well as as sequence of gates in the set. Any quantum program can be represented by a sequence of quantum circuits and classical near-time computation.

In Qiskit, this core element is represented by the [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") class. Below is an example of a quantum circuit that makes a three-qubit GHZ state defined as:

$$
|\psi\rangle = \left(|000\rangle+|111\rangle\right)/\sqrt{2}
$$

```python
from qiskit import QuantumCircuit
# Create a circuit with a register of three qubits
circ = QuantumCircuit(3)
# H gate on qubit 0, putting this qubit in a superposition of |0> + |1>.
circ.h(0)
# A CX (CNOT) gate on control qubit 0 and target qubit 1 generating a Bell state.
circ.cx(0, 1)
# CX (CNOT) gate on control qubit 0 and target qubit 2 resulting in a GHZ state.
circ.cx(0, 2)
# Draw the circuit
circ.draw()
```

```python
     ┌───┐          
q_0: ┤ H ├──■────■──
     └───┘┌─┴─┐  │  
q_1: ─────┤ X ├──┼──
          └───┘┌─┴─┐
q_2: ──────────┤ X ├
               └───┘
```

## Supplementary Information

<span id="module-qiskit.circuit" />

`¶`

Quantum Circuit Properties

When constructing quantum circuits, there are several properties that help quantify the “size” of the circuits, and their ability to be run on a noisy quantum device. Some of these, like number of qubits, are straightforward to understand, while others like depth and number of tensor components require a bit more explanation. Here we will explain all of these properties, and, in preparation for understanding how circuits change when run on actual devices, highlight the conditions under which they change.

Consider the following circuit:

```python
from qiskit import QuantumCircuit
qc = QuantumCircuit(12)
for idx in range(5):
   qc.h(idx)
   qc.cx(idx, idx+5)

qc.cx(1, 7)
qc.x(8)
qc.cx(1, 9)
qc.x(7)
qc.cx(1, 11)
qc.swap(6, 11)
qc.swap(6, 9)
qc.swap(6, 10)
qc.x(6)
qc.draw()
```

```python
      ┌───┐                                                           
 q_0: ┤ H ├──■────────────────────────────────────────────────────────
      ├───┤  │                                                        
 q_1: ┤ H ├──┼────■───────────────────■────■─────────■────────────────
      ├───┤  │    │                   │    │         │                
 q_2: ┤ H ├──┼────┼────■──────────────┼────┼─────────┼────────────────
      ├───┤  │    │    │              │    │         │                
 q_3: ┤ H ├──┼────┼────┼────■─────────┼────┼─────────┼────────────────
      ├───┤  │    │    │    │         │    │         │                
 q_4: ┤ H ├──┼────┼────┼────┼────■────┼────┼─────────┼────────────────
      └───┘┌─┴─┐  │    │    │    │    │    │         │                
 q_5: ─────┤ X ├──┼────┼────┼────┼────┼────┼─────────┼────────────────
           └───┘┌─┴─┐  │    │    │    │    │         │           ┌───┐
 q_6: ──────────┤ X ├──┼────┼────┼────┼────┼─────────┼───X──X──X─┤ X ├
                └───┘┌─┴─┐  │    │  ┌─┴─┐  │  ┌───┐  │   │  │  │ └───┘
 q_7: ───────────────┤ X ├──┼────┼──┤ X ├──┼──┤ X ├──┼───┼──┼──┼──────
                     └───┘┌─┴─┐  │  ├───┤  │  └───┘  │   │  │  │      
 q_8: ────────────────────┤ X ├──┼──┤ X ├──┼─────────┼───┼──┼──┼──────
                          └───┘┌─┴─┐└───┘┌─┴─┐       │   │  │  │      
 q_9: ─────────────────────────┤ X ├─────┤ X ├───────┼───┼──X──┼──────
                               └───┘     └───┘       │   │     │      
q_10: ───────────────────────────────────────────────┼───┼─────X──────
                                                   ┌─┴─┐ │            
q_11: ─────────────────────────────────────────────┤ X ├─X────────────
                                                   └───┘              
```

From the plot, it is easy to see that this circuit has 12 qubits, and a collection of Hadamard, CNOT, X, and SWAP gates. But how to quantify this programmatically? Because we can do single-qubit gates on all the qubits simultaneously, the number of qubits in this circuit is equal to the **width** of the circuit:

```python
qc.width()
```

```python
12
```

We can also just get the number of qubits directly:

```python
qc.num_qubits
```

```python
12
```

<Admonition title="Important" type="danger">
  For a quantum circuit composed from just qubits, the circuit width is equal to the number of qubits. This is the definition used in quantum computing. However, for more complicated circuits with classical registers, and classically controlled gates, this equivalence breaks down. As such, from now on we will not refer to the number of qubits in a quantum circuit as the width.
</Admonition>

It is also straightforward to get the number and type of the gates in a circuit using [`QuantumCircuit.count_ops()`](qiskit.circuit.QuantumCircuit.count_ops#qiskit.circuit.QuantumCircuit.count_ops "qiskit.circuit.QuantumCircuit.count_ops"):

```python
qc.count_ops()
```

```python
OrderedDict([('cx', 8), ('h', 5), ('x', 3), ('swap', 3)])
```

We can also get just the raw count of operations by computing the circuits [`QuantumCircuit.size()`](qiskit.circuit.QuantumCircuit.size#qiskit.circuit.QuantumCircuit.size "qiskit.circuit.QuantumCircuit.size"):

```python
qc.size()
```

```python
19
```

A particularly important circuit property is known as the circuit **depth**. The depth of a quantum circuit is a measure of how many “layers” of quantum gates, executed in parallel, it takes to complete the computation defined by the circuit. Because quantum gates take time to implement, the depth of a circuit roughly corresponds to the amount of time it takes the quantum computer to execute the circuit. Thus, the depth of a circuit is one important quantity used to measure if a quantum circuit can be run on a device.

The depth of a quantum circuit has a mathematical definition as the longest path in a directed acyclic graph (DAG). However, such a definition is a bit hard to grasp, even for experts. Fortunately, the depth of a circuit can be easily understood by anyone familiar with playing [Tetris](https://en.wikipedia.org/wiki/Tetris). Lets see how to compute this graphically:

![../\_images/depth.gif](/images/api/qiskit/0.33/depth.gif)

We can verify our graphical result using [`QuantumCircuit.depth()`](qiskit.circuit.QuantumCircuit.depth#qiskit.circuit.QuantumCircuit.depth "qiskit.circuit.QuantumCircuit.depth"):

```python
qc.depth()
```

```python
9
```

## Quantum Circuit API

<span id="module-qiskit.circuit" />

`¶`

### Quantum Circuit Construction[¶](#quantum-circuit-construction "Permalink to this headline")

|                                                                                                                                                    |                                  |
| -------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------- |
| [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")(\*regs\[, name, global\_phase, …]) | Create a new circuit.            |
| [`QuantumRegister`](qiskit.circuit.QuantumRegister#qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")(\[size, name, bits])           | Implement a quantum register.    |
| [`Qubit`](qiskit.circuit.Qubit#qiskit.circuit.Qubit "qiskit.circuit.Qubit")(\[register, index])                                                    | Implement a quantum bit.         |
| [`ClassicalRegister`](qiskit.circuit.ClassicalRegister#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister")(\[size, name, bits])   | Implement a classical register.  |
| [`Clbit`](qiskit.circuit.Clbit#qiskit.circuit.Clbit "qiskit.circuit.Clbit")(\[register, index])                                                    | Implement a classical bit.       |
| [`AncillaRegister`](qiskit.circuit.AncillaRegister#qiskit.circuit.AncillaRegister "qiskit.circuit.AncillaRegister")(\[size, name, bits])           | Implement an ancilla register.   |
| [`AncillaQubit`](qiskit.circuit.AncillaQubit#qiskit.circuit.AncillaQubit "qiskit.circuit.AncillaQubit")(\[register, index])                        | A qubit used as ancillary qubit. |

### Gates and Instructions[¶](#gates-and-instructions "Permalink to this headline")

|                                                                                                                                                  |                                                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------ |
| [`Gate`](qiskit.circuit.Gate#qiskit.circuit.Gate "qiskit.circuit.Gate")(name, num\_qubits, params\[, label])                                     | Unitary gate.                                                                                          |
| [`ControlledGate`](qiskit.circuit.ControlledGate#qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")(name, num\_qubits, params\[, …]) | Controlled unitary gate.                                                                               |
| [`Delay`](qiskit.circuit.Delay#qiskit.circuit.Delay "qiskit.circuit.Delay")(duration\[, unit])                                                   | Do nothing and just delay/wait/idle for a specified duration.                                          |
| [`Measure`](qiskit.circuit.Measure#qiskit.circuit.Measure "qiskit.circuit.Measure")()                                                            | Quantum measurement in the computational basis.                                                        |
| [`Reset`](qiskit.circuit.Reset#qiskit.circuit.Reset "qiskit.circuit.Reset")()                                                                    | Qubit reset.                                                                                           |
| [`Instruction`](qiskit.circuit.Instruction#qiskit.circuit.Instruction "qiskit.circuit.Instruction")(name, num\_qubits, num\_clbits, params)      | Generic quantum instruction.                                                                           |
| [`InstructionSet`](qiskit.circuit.InstructionSet#qiskit.circuit.InstructionSet "qiskit.circuit.InstructionSet")(\[circuit\_cregs, …])            | Instruction collection, and their contexts.                                                            |
| [`EquivalenceLibrary`](qiskit.circuit.EquivalenceLibrary#qiskit.circuit.EquivalenceLibrary "qiskit.circuit.EquivalenceLibrary")(\*\[, base])     | A library providing a one-way mapping of Gates to their equivalent implementations as QuantumCircuits. |

### Control Flow Operations[¶](#control-flow-operations "Permalink to this headline")

|                                                                                                                                                     |                                                                                                                                                                                        |
| --------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`ControlFlowOp`](qiskit.circuit.ControlFlowOp#qiskit.circuit.ControlFlowOp "qiskit.circuit.ControlFlowOp")(name, num\_qubits, num\_clbits, …)      | Abstract class to encapsulate all control flow operations.                                                                                                                             |
| [`IfElseOp`](qiskit.circuit.IfElseOp#qiskit.circuit.IfElseOp "qiskit.circuit.IfElseOp")(condition, true\_body\[, false\_body, …])                   | A circuit operation which executes a program (`true_body`) if a provided condition (`condition`) evaluates to true, and optionally evaluates another program (`false_body`) otherwise. |
| [`WhileLoopOp`](qiskit.circuit.WhileLoopOp#qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp")(condition, body\[, label])                      | A circuit operation which repeatedly executes a subcircuit (`body`) until a condition (`condition`) evaluates as False.                                                                |
| [`ForLoopOp`](qiskit.circuit.ForLoopOp#qiskit.circuit.ForLoopOp "qiskit.circuit.ForLoopOp")(indexset, loop\_parameter, body\[, …])                  | A circuit operation which repeatedly executes a subcircuit (`body`) parameterized by a parameter `loop_parameter` through the set of integer values provided in `indexset`.            |
| [`BreakLoopOp`](qiskit.circuit.BreakLoopOp#qiskit.circuit.BreakLoopOp "qiskit.circuit.BreakLoopOp")(num\_qubits, num\_clbits\[, label])             | A circuit operation which, when encountered, jumps to the end of the nearest enclosing loop.                                                                                           |
| [`ContinueLoopOp`](qiskit.circuit.ContinueLoopOp#qiskit.circuit.ContinueLoopOp "qiskit.circuit.ContinueLoopOp")(num\_qubits, num\_clbits\[, label]) | A circuit operation which, when encountered, moves to the next iteration of the nearest enclosing loop.                                                                                |

### Parametric Quantum Circuits[¶](#parametric-quantum-circuits "Permalink to this headline")

|                                                                                                                                                        |                                                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------- |
| [`Parameter`](qiskit.circuit.Parameter#qiskit.circuit.Parameter "qiskit.circuit.Parameter")(name)                                                      | Parameter Class for variable parameters.                                |
| [`ParameterVector`](qiskit.circuit.ParameterVector#qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector")(name\[, length])                   | ParameterVector class to quickly generate lists of parameters.          |
| [`ParameterExpression`](qiskit.circuit.ParameterExpression#qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")(symbol\_map, expr) | ParameterExpression class to enable creating expressions of Parameters. |

### Random Circuits[¶](#random-circuits "Permalink to this headline")

|                                                                                                                                                                       |                                                     |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- |
| [`random.random_circuit`](qiskit.circuit.random.random_circuit#qiskit.circuit.random.random_circuit "qiskit.circuit.random.random_circuit")(num\_qubits, depth\[, …]) | Generate random circuit of arbitrary size and form. |

